syntax = "proto3";

package pb;

import "product.proto";

option go_package = "github.com/theme-ce/simple-shop/pb";

message UpdateProductRequest {
    int64 id = 1;
    optional string name = 2;
    optional string description = 3;
    optional int64 price = 4;
    optional int64 stock_quantity = 5;
}

message UpdateProductResponse {
    Product product = 1;
}